--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,8 @@
     "mustache-express": "^1.3.2",
     "node": "^17.7.2",
     "nodemon": "^2.0.16",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
